--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -10,62 +10,28 @@
 \ajoutcompetence{RT1-Administrer}{\niveauA}
 
 
+
 \ajoutcompetence{RT2-Connecter}{\niveauA}
 
+
+
 \ajoutcompetence{RT3-Programmer}{\niveauA}
-\ajoutac{AC311}{Utiliser un système informatique et ses outils}
-\ajoutac{AC312}{Lire, exécuter, corriger et modifier un programme}
-\ajoutac{AC313}{Traduire un algorithme, dans un langage et pour un environnement donné}
-\ajoutac{AC316}{S’intégrer dans un environnement propice au développement et au travail collaboratif}
 
 % Les SAE
-\ajoutsae{SAÉ15}{Traitement de données }
+\ajoutsae{SAÉ15}{Traiter des données}
 
 % Les pre-requis
-%\ajoutprerequis{R101}{Blabla}
-%\ajoutprerequis{R102}{Blabla}
+
 
 % Le descriptif
 \ajoutancrage{
-Elle fournit les bases conceptuelles et pratiques pour concevoir et spécifier formellement un traitement automatisé de l'information. Ces bases pourront venir en appui de nombreuses compétences techniques (en informatique, en réseau, en télécommunication, ...) que le professionnel R\&T doit développer et s’inscrivent dans de nombreuses situations professionnelles que rencontrent le professionnel R\&T, notamment  le développement d’outils informatiques à usage interne d'une équipe (compétence RT3-Programmer) ou l’automatisation du déploiement et de la maintenance des outils logiciels (compétence RT1-Administrer).
+Elle fournit les bases conceptuelles et pratiques pour concevoir et spécifier formellement un traitement automatisé de l'information. Ces bases pourront venir en appui de nombreuses compétences techniques (en informatique, en réseau, en télécommunication, ...) que le professionnel R\&T doit développer et s’inscrivent dans de nombreuses situations professionnelles que rencontrent le professionnel R\&T, notamment  le développement d’outils informatiques à usage interne d'une équipe (compétence RT3-Programmer) ou l’automatisation du déploiement et de la maintenance des outils logiciels (compétence RT1-Administrer).  
 }
 
 % Contenus
 \ajoutcontenudetaille{
-En utilisant un langage de programmation, comme par exemple Python, les contenus suivants seront traités :
-\begin{itemize}
-\item Notions d'algorithmique
-	\begin{itemize}
-	\item Variables, types de base (nombres, chaînes, listes/tableaux)
-	\item Structures de contrôle : tests, répétitions
-	\item Fonctions et procédures
-	\item Portée des variables
-	\end{itemize}
-\item Tests et corrections d’un programme
-\item Prise en main d'un environnement de programmation (éditeur, environnement de développement)
-\item Prise en main de bibliothèques, modules, d'objets existants (appels de méthodes), …
-\item Manipulation de fichiers texte
-\item Interaction avec le système d'exploitation et la ligne de commande : arguments, lancement de commandes
-\item Suivi de versions (git, svn, ...)
-\end{itemize}
-L'utilisation de l’anglais est préconisée pour la documentation du code.
+En utilisant un langage de programmation, comme par exemple Python, les contenus suivants seront traités : * Notions d'algorithmique :	* Variables, types de base (nombres, chaînes, listes/tableaux).	* Structures de contrôle : tests, répétitions.	* Fonctions et procédures.	* Portée des variables.* Tests et corrections d’un programme. * Prise en main d’un environnement de programmation (éditeur, environnement de développement). * Prise en main de bibliothèques, modules, d'objets existants (appels de méthodes), … * Manipulation de fichiers texte. * Interaction avec le système d'exploitation et la ligne de commande : arguments, lancement de commandes. * Suivi de versions (git, svn, ...). L’utilisation de l’anglais est préconisée pour la documentation du code.
 }
-
-%\ajoutintrocontenu{En utilisant un langage de programmation, comme par exemple Python, les contenus suivants seront traités :}
-%\ajoutcontenu{Notions d'algorithmique}
-%\ajoutdetailcontenu{Variables, types de base (nombres, chaînes, listes/tableaux)}
-%\ajoutdetailcontenu{Structures de contrôle : tests, répétitions}
-%\ajoutdetailcontenu{Fonctions et procédures}
-%\ajoutdetailcontenu{Portée des variables}
-%
-%\ajoutcontenu{Tests et corrections d’un programme}
-%\ajoutcontenu{Prise en main d'un environnement de programmation (éditeur, environnement de développement)}
-%\ajoutcontenu{Prise en main de bibliothèques, modules, d'objets existants (appels de méthodes), …}
-%\ajoutcontenu{Manipulation de fichiers texte}
-%\ajoutcontenu{Interaction avec le système d'exploitation et la ligne de commande : arguments, lancement de commandes}
-%\ajoutcontenu{Suivi de versions (git, svn, ...)}
-%
-%\ajoutconclusioncontenu{L'’utilisation de l’anglais est préconisée pour la documentation du code.}
 
 % Mots-clés
 \ajoutmotscles{Algorithmes, langages de programmation, méthodologie de développement, suivi de versions}
