--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -30,7 +30,16 @@ Elle fournit les bases conceptuelles et pratiques pour concevoir et spécifier f
 
 % Contenus
 \ajoutcontenudetaille{
-En utilisant un langage de programmation, comme par exemple Python, les contenus suivants seront traités : * Notions d'algorithmique :	* Variables, types de base (nombres, chaînes, listes/tableaux).	* Structures de contrôle : tests, répétitions.	* Fonctions et procédures.	* Portée des variables.* Tests et corrections d’un programme. * Prise en main d’un environnement de programmation (éditeur, environnement de développement). * Prise en main de bibliothèques, modules, d'objets existants (appels de méthodes), … * Manipulation de fichiers texte. * Interaction avec le système d'exploitation et la ligne de commande : arguments, lancement de commandes. * Suivi de versions (git, svn, ...). L’utilisation de l’anglais est préconisée pour la documentation du code.
+En utilisant un langage de programmation, comme par exemple Python, les contenus suivants seront traités : * Notions d'algorithmique :
+\begin{itemize}
+\item Variables, types de base (nombres, chaînes, listes/tableaux).
+\item Structures de contrôle : tests, répétitions.
+\item Fonctions et procédures.
+\item Portée des variables.
+\begin{itemize}
+\item Tests et corrections d’un programme. \item Prise en main d’un environnement de programmation (éditeur, environnement de développement). \item Prise en main de bibliothèques, modules, d'objets existants (appels de méthodes), … \item Manipulation de fichiers texte. \item Interaction avec le système d'exploitation et la ligne de commande : arguments, lancement de commandes. \item Suivi de versions (git, svn, ...). L’utilisation de l’anglais est préconisée pour la documentation du code.
+\end{itemize}
+\end{itemize}
 }
 
 % Mots-clés
