--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -9,9 +9,9 @@
 %% Les compétences et les ACs
 \ajoutcompetence{RT1-Administrer}{\niveauA}
 
-\ajoutac{AC111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
-\ajoutac{AC114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
-\ajoutac{AC116}{Installer un poste client}
+\ajoutac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
+\ajoutac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
+\ajoutac{AC0116}{Installer un poste client}
 
 \ajoutcompetence{RT2-Connecter}{\niveauA}
 
@@ -32,7 +32,9 @@ Cette ressource traite des bases de l’utilisation d’un poste client et de so
 
 % Contenus
 \ajoutcontenudetaille{
-* Systèmes d'exploitations Windows/Linux, InterfaceHommeMachine et ligne de commande * Arborescence des répertoires, déplacement, consultation, chemins * Manipulation de fichiers avec un éditeur texte * Permissions, droits * Gestion des processus et flux (redirection, pipe…) * Se documenter sur le détail des commandes en français/anglais (commande man) * Consulter et modifier les variables d’environnement * Commandes réseau (wget, curl, ping, traceroute, netstat, nmap…) * Initiation aux scripts pour l’automatisation de séquences de commandes, aux structures de contrôle
+\begin{itemize}
+\item Systèmes d'exploitations Windows/Linux, InterfaceHommeMachine et ligne de commande \item Arborescence des répertoires, déplacement, consultation, chemins \item Manipulation de fichiers avec un éditeur texte \item Permissions, droits \item Gestion des processus et flux (redirection, pipe…) \item Se documenter sur le détail des commandes en français/anglais (commande man) \item Consulter et modifier les variables d’environnement \item Commandes réseau (wget, curl, ping, traceroute, netstat, nmap…) \item Initiation aux scripts pour l’automatisation de séquences de commandes, aux structures de contrôle
+\end{itemize}
 }
 
 % Mots-clés
