ajoute les noms de compétences associés aux acs dans le yaml pour une meilleure lisibilité

--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -9,9 +9,9 @@
 %% Les compétences et les ACs
 \ajoutcompetence{RT1-Administrer}{\niveauA}
 
-\ajoutac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
-\ajoutac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
-\ajoutac{AC0116}{Installer un poste client}
+\ajoutac{RT1}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
+\ajoutac{RT1}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
+\ajoutac{RT1}{Installer un poste client}
 
 \ajoutcompetence{RT2-Connecter}{\niveauA}
 
