--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -1,46 +1,51 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Ressources
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \nouvelleressource{R107}{Fondamentaux de la programmation}
-
 \ajoutheures{41}{30}
-
 %% Les compétences et les ACs
 \ajoutcompetence{RT1-Administrer}{\niveauA}
 
-
-
 \ajoutcompetence{RT2-Connecter}{\niveauA}
 
-
-
 \ajoutcompetence{RT3-Programmer}{\niveauA}
-
 % Les SAE
 \ajoutsae{SAÉ15}{Traiter des données}
-
 % Les pre-requis
-
 
 % Le descriptif
 \ajoutancrage{
 Elle fournit les bases conceptuelles et pratiques pour concevoir et spécifier formellement un traitement automatisé de l'information. Ces bases pourront venir en appui de nombreuses compétences techniques (en informatique, en réseau, en télécommunication, ...) que le professionnel R\&T doit développer et s’inscrivent dans de nombreuses situations professionnelles que rencontrent le professionnel R\&T, notamment  le développement d’outils informatiques à usage interne d'une équipe (compétence RT3-Programmer) ou l’automatisation du déploiement et de la maintenance des outils logiciels (compétence RT1-Administrer).  
 }
-
 % Contenus
 \ajoutcontenudetaille{
-En utilisant un langage de programmation, comme par exemple Python, les contenus suivants seront traités : * Notions d'algorithmique :
+En utilisant un langage de programmation, comme par exemple Python, les
+contenus suivants seront traités : * Notions d'algorithmique :
+\begin{verbatim}
+* Variables, types de base (nombres, chaînes, listes/tableaux).
+* Structures de contrôle : tests, répétitions.
+* Fonctions et procédures.
+* Portée des variables.
+\end{verbatim}
 \begin{itemize}
-\item Variables, types de base (nombres, chaînes, listes/tableaux).
-\item Structures de contrôle : tests, répétitions.
-\item Fonctions et procédures.
-\item Portée des variables.
-\begin{itemize}
-\item Tests et corrections d’un programme. \item Prise en main d’un environnement de programmation (éditeur, environnement de développement). \item Prise en main de bibliothèques, modules, d'objets existants (appels de méthodes), … \item Manipulation de fichiers texte. \item Interaction avec le système d'exploitation et la ligne de commande : arguments, lancement de commandes. \item Suivi de versions (git, svn, ...). L’utilisation de l’anglais est préconisée pour la documentation du code.
-\end{itemize}
+\tightlist
+\item
+  Tests et corrections d'un programme.
+\item
+  Prise en main d'un environnement de programmation (éditeur,
+  environnement de développement).
+\item
+  Prise en main de bibliothèques, modules, d'objets existants (appels de
+  méthodes), \ldots{}
+\item
+  Manipulation de fichiers texte.
+\item
+  Interaction avec le système d'exploitation et la ligne de commande :
+  arguments, lancement de commandes.
+\item
+  Suivi de versions (git, svn, \ldots). L'utilisation de l'anglais est
+  préconisée pour la documentation du code.
 \end{itemize}
 }
-
 % Mots-clés
 \ajoutmotscles{Algorithmes, langages de programmation, méthodologie de développement, suivi de versions}
