--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -1,41 +1,50 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Ressources
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \nouvelleressource{R108}{Bases des systèmes d'exploitation}
-
 \ajoutheures{27}{21}
-
 %% Les compétences et les ACs
 \ajoutcompetence{RT1-Administrer}{\niveauA}
-
-\ajoutac{RT1}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
 \ajoutac{RT1}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
 \ajoutac{RT1}{Installer un poste client}
-
 \ajoutcompetence{RT2-Connecter}{\niveauA}
 
-
-
 \ajoutcompetence{RT3-Programmer}{\niveauA}
-
 % Les SAE
 \ajoutsae{SAÉ15}{Traiter des données}
-
 % Les pre-requis
-
 
 % Le descriptif
 \ajoutancrage{
-Cette ressource traite des bases de l’utilisation d’un poste client et de son système d’exploitation.  Elle est essentielle pour la prise en main pratique d’un système informatique en abordant notamment la gestion des données dans un espace de stockage (organisation, recherche, droits) et la maîtrise d’un environnement numérique, deux thèmes attendus par le référentiel PIX (https://pix.fr/competences). Cette ressource  introduit également un usage avancé du système d’exploitation nécessaire au besoin d’un professionnel R\&T. Elle vise la maîtrise de commandes en ligne pour gérer l’arborescence de fichiers, les programmes et les processus du système d’exploitation, par exemple pour exécuter un programme ou configurer les éléments d’un site Web  (compétence RT3-Programmer). Elle vise également l’emploi des principales commandes réseau, dans des scripts simples. Ces commandes sont les bases d’appui pour administrer - par la suite - un réseau et de ses services (compétence RT1-Administrer). Elle contribue donc aux apprentissages critiques mentionnés précédemment. 
+Cette ressource traite des bases de l’utilisation d’un poste client et de son système d’exploitation.
+Elle est essentielle pour la prise en main pratique d’un système informatique en abordant notamment la gestion des données dans un espace de stockage (organisation, recherche, droits) et la maîtrise d’un environnement numérique, deux thèmes attendus par le référentiel PIX (https://pix.fr/competences). Cette ressource  introduit également un usage avancé du système d’exploitation nécessaire au besoin d’un professionnel R\&T. Elle vise la maîtrise de commandes en ligne pour gérer l’arborescence de fichiers, les programmes et les processus du système d’exploitation, par exemple pour exécuter un programme ou configurer les éléments d’un site Web  (compétence RT3-Programmer). Elle vise également l’emploi des principales commandes réseau, dans des scripts simples. Ces commandes sont les bases d’appui pour administrer - par la suite - un réseau et de ses services (compétence RT1-Administrer). Elle contribue donc aux apprentissages critiques mentionnés précédemment. 
 }
-
 % Contenus
 \ajoutcontenudetaille{
 \begin{itemize}
-\item Systèmes d'exploitations Windows/Linux, InterfaceHommeMachine et ligne de commande \item Arborescence des répertoires, déplacement, consultation, chemins \item Manipulation de fichiers avec un éditeur texte \item Permissions, droits \item Gestion des processus et flux (redirection, pipe…) \item Se documenter sur le détail des commandes en français/anglais (commande man) \item Consulter et modifier les variables d’environnement \item Commandes réseau (wget, curl, ping, traceroute, netstat, nmap…) \item Initiation aux scripts pour l’automatisation de séquences de commandes, aux structures de contrôle
+\tightlist
+\item
+  Systèmes d'exploitations Windows/Linux, Interface-Homme-Machine et
+  ligne de commande
+\item
+  Arborescence des répertoires, déplacement, consultation, chemins
+\item
+  Manipulation de fichiers avec un éditeur texte
+\item
+  Permissions, droits
+\item
+  Gestion des processus et flux (redirection, pipe\ldots)
+\item
+  Se documenter sur le détail des commandes en français/anglais
+  (commande man)
+\item
+  Consulter et modifier les variables d'environnement
+\item
+  Commandes réseau (wget, curl, ping, traceroute, netstat, nmap\ldots)
+\item
+  Initiation aux scripts pour l'automatisation de séquences de
+  commandes, aux structures de contrôle
 \end{itemize}
 }
-
 % Mots-clés
 \ajoutmotscles{Programmation, arborescence, processus, scripts, variables d’environnement, PIX.}
