Correction de coquilles diverses

--- a/latex/modeles/tableau_ressource.tex
+++ b/latex/modeles/tableau_ressource.tex
@@ -60,7 +60,7 @@ Aucun
 	\xdef\CODE{#1} % le code de la ressource sous la forme AA
 	
 	\begin{tabular}[t]{@{}T@{}} 
-	{\bfseries Ancrage et contexte professionnel :} \\
+	% {\bfseries Ancrage et contexte professionnel :} \\
 	\csname ressourceancrage\CODE\endcsname \\
 	{\bfseries Contenus :} \\
 	\csname ressourcecontenudetaille\CODE\endcsname
