--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -101,6 +101,12 @@ bottom=15mm
 	\newpage
 }
 
+\forLoop{1}{\value{cptressourceB}}{noressource}{
+	%A\Alph{noressource}
+	\tableauRessource{B\Alph{noressource}}
+	\newpage
+}
+
 %\tableauRessource{AA} 
 %\tableauRessource{AB}
 
