Améliore détection des pré-requis

--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -17,6 +17,10 @@
 
 \ajoutcompetence{RT3-Programmer}{\niveauA}
 
+\ajoutac{AC0311}{Utiliser un système informatique et ses outils}
+\ajoutac{AC0312}{Lire, exécuter, corriger et modifier un programme}
+\ajoutac{AC0313}{Traduire un algorithme, dans un langage et pour un environnement donné}
+\ajoutac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
 \ajoutsae{SAÉ15}{Traiter des données}
 
