--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -9,8 +9,8 @@
 %% Les compétences et les ACs
 \ajoutcompetence{RT1-Administrer}{\niveauA}
 
-\ajoutac{RT1}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
-\ajoutac{RT1}{Installer un poste client}
+\ajoutac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
+\ajoutac{AC0116}{Installer un poste client}
 
 \ajoutcompetence{RT2-Connecter}{\niveauA}
 
@@ -18,6 +18,8 @@
 
 \ajoutcompetence{RT3-Programmer}{\niveauA}
 
+\ajoutac{AC0311}{Utiliser un système informatique et ses outils}
+\ajoutac{AC0312}{Lire, exécuter, corriger et modifier un programme}
 % Les SAE
 \ajoutsae{SAÉ15}{Traiter des données}
 
