Rajoute le nettoyage des mots-clés

--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -28,8 +28,7 @@
 
 
 % Le descriptif
-\ajoutancrage{
-Elle fournit les bases conceptuelles et pratiques pour concevoir et
+\ajoutancrage{Elle fournit les bases conceptuelles et pratiques pour concevoir et
 spécifier formellement un traitement automatisé de l'information. Ces
 bases pourront venir en appui de nombreuses compétences techniques (en
 informatique, en réseau, en télécommunication, \ldots) que le
@@ -37,8 +36,7 @@ professionnel R\&T doit développer et s'inscrivent dans de nombreuses
 situations professionnelles que rencontrent le professionnel R\&T,
 notamment le développement d'outils informatiques à usage interne d'une
 équipe (compétence RT3-Programmer) ou l'automatisation du déploiement et
-de la maintenance des outils logiciels (compétence RT1-Administrer).
-}
+de la maintenance des outils logiciels (compétence RT1-Administrer).}
 
 % Contenus
 \ajoutcontenudetaille{
