--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -27,8 +27,7 @@
 
 
 % Le descriptif
-\ajoutancrage{
-Cette ressource traite des bases de l'utilisation d'un poste client et
+\ajoutancrage{Cette ressource traite des bases de l'utilisation d'un poste client et
 de son système d'exploitation.
 Elle est essentielle pour la prise en main pratique d'un système
 informatique en abordant notamment la gestion des données dans un espace
@@ -44,8 +43,7 @@ vise également l'emploi des principales commandes réseau, dans des
 scripts simples. Ces commandes sont les bases d'appui pour administrer -
 par la suite - un réseau et de ses services (compétence
 RT1-Administrer). Elle contribue donc aux apprentissages critiques
-mentionnés précédemment.
-}
+mentionnés précédemment.}
 
 % Contenus
 \ajoutcontenudetaille{
@@ -75,4 +73,4 @@ mentionnés précédemment.
 }
 
 % Mots-clés
-\ajoutmotscles{Programmation, arborescence, processus, scripts, variables d'environnement, PIX.}
+\ajoutmotscles{Programmation, arborescence, processus, scripts, variables d'environnement, PIX}
