débute le traitement des saé

--- a/latex/modeles/tableau_ressource.tex
+++ b/latex/modeles/tableau_ressource.tex
@@ -63,7 +63,9 @@ Aucun
 	% {\bfseries Ancrage et contexte professionnel :} \\
 	\csname ressourceancrage\CODE\endcsname \\
 	{\bfseries Contenus :} \\
-	\csname ressourcecontenudetaille\CODE\endcsname
+	%{\setlength{\extrarowheight}{1pt} 
+	\csname ressourcecontenudetaille\CODE\endcsname 
+	%}
 	\end{tabular}
 }
 
