--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -28,22 +28,22 @@
 
 % Le descriptif
 \ajoutancrage{Cette ressource traite des bases de l'utilisation d'un poste client et
-de son système d'exploitation.
-Elle est essentielle pour la prise en main pratique d'un système
-informatique en abordant notamment la gestion des données dans un espace
-de stockage (organisation, recherche, droits) et la maîtrise d'un
-environnement numérique, deux thèmes attendus par le référentiel PIX
-(https://pix.fr/competences). Cette ressource introduit également un
-usage avancé du système d'exploitation nécessaire au besoin d'un
-professionnel R\&T. Elle vise la maîtrise de commandes en ligne pour
-gérer l'arborescence de fichiers, les programmes et les processus du
-système d'exploitation, par exemple pour exécuter un programme ou
-configurer les éléments d'un site Web (compétence RT3-Programmer). Elle
-vise également l'emploi des principales commandes réseau, dans des
-scripts simples. Ces commandes sont les bases d'appui pour administrer -
-par la suite - un réseau et de ses services (compétence
-RT1-Administrer). Elle contribue donc aux apprentissages critiques
-mentionnés précédemment.}
+de son système d'exploitation. Elle est essentielle pour la prise en
+main pratique d'un système informatique en abordant notamment la gestion
+des données dans un espace de stockage (organisation, recherche, droits)
+et la maîtrise d'un environnement numérique, deux thèmes attendus par le
+référentiel PIX (https://pix.fr/competences).
+Cette ressource introduit également un usage avancé du système
+d'exploitation nécessaire au besoin d'un professionnel R\&T. Elle vise
+la maîtrise de commandes en ligne pour gérer l'arborescence de fichiers,
+les programmes et les processus du système d'exploitation, par exemple
+pour exécuter un programme ou configurer les éléments d'un site Web
+(compétence RT3-Programmer). Elle vise également l'emploi des
+principales commandes réseau, dans des scripts simples. Ces commandes
+sont les bases d'appui pour administrer - par la suite - un réseau et de
+ses services (compétence RT1-Administrer).
+Elle contribue donc aux apprentissages critiques mentionnés
+précédemment.}
 
 % Contenus
 \ajoutcontenudetaille{
