--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -4,30 +4,30 @@
 
 \nouvelleressource{R108}{Bases des systèmes d'exploitation}
 
-\ajoutheures{27}{21}
+\ajoutRheures{27}{21}
 
 %% Les compétences et les ACs
-\ajoutcompetence{RT1-Administrer}{\niveauA}
+\ajoutRcompetence{RT1-Administrer}{\niveauA}
 
-\ajoutac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
-\ajoutac{AC0116}{Installer un poste client}
+\ajoutRac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
+\ajoutRac{AC0116}{Installer un poste client}
 
-\ajoutcompetence{RT2-Connecter}{\niveauA}
+\ajoutRcompetence{RT2-Connecter}{\niveauA}
 
 
 
-\ajoutcompetence{RT3-Programmer}{\niveauA}
+\ajoutRcompetence{RT3-Programmer}{\niveauA}
 
-\ajoutac{AC0311}{Utiliser un système informatique et ses outils}
-\ajoutac{AC0312}{Lire, exécuter, corriger et modifier un programme}
+\ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
+\ajoutRac{AC0312}{Lire, exécuter, corriger et modifier un programme}
 % Les SAE
-\ajoutsae{SAÉ15}{Traiter des données}
+\ajoutRsae{SAÉ15}{Traiter des données}
 
 % Les pre-requis
 
 
 % Le descriptif
-\ajoutancrage{Cette ressource traite des bases de l'utilisation d'un poste client et
+\ajoutRancrage{Cette ressource traite des bases de l'utilisation d'un poste client et
 de son système d'exploitation. Elle est essentielle pour la prise en
 main pratique d'un système informatique en abordant notamment la gestion
 des données dans un espace de stockage (organisation, recherche, droits)
@@ -46,7 +46,7 @@ Elle contribue donc aux apprentissages critiques mentionnés
 précédemment.}
 
 % Contenus
-\ajoutcontenudetaille{
+\ajoutRcontenudetaille{
 \begin{itemize}
 \item
   Systèmes d'exploitations Windows/Linux, Interface-Homme-Machine et
@@ -73,4 +73,4 @@ précédemment.}
 }
 
 % Mots-clés
-\ajoutmotscles{Programmation, arborescence, processus, scripts, variables d'environnement, PIX}
+\ajoutRmotscles{Programmation, arborescence, processus, scripts, variables d'environnement, PIX}
