--- a/python/pn/modele_ressource.tex
+++ b/python/pn/modele_ressource.tex
@@ -4,18 +4,18 @@
 
 \nouvelleressource{#code}{#nom}
 
-\ajoutheures{#heures_formation}{#heures_tp}
+\ajoutRheures{#heures_formation}{#heures_tp}
 
 %% Les compétences et les ACs
-\ajoutcompetence{RT1-Administrer}{\niveauA}
+\ajoutRcompetence{RT1-Administrer}{\niveauA}
 
 #compRT1
 
-\ajoutcompetence{RT2-Connecter}{\niveauA}
+\ajoutRcompetence{RT2-Connecter}{\niveauA}
 
 #compRT2
 
-\ajoutcompetence{RT3-Programmer}{\niveauA}
+\ajoutRcompetence{RT3-Programmer}{\niveauA}
 
 #compRT3
 % Les SAE
@@ -25,12 +25,12 @@
 #prerequis
 
 % Le descriptif
-\ajoutancrage{#contexte}
+\ajoutRancrage{#contexte}
 
 % Contenus
-\ajoutcontenudetaille{
+\ajoutRcontenudetaille{
 #contenu
 }
 
 % Mots-clés
-\ajoutmotscles{#motscles}
+\ajoutRmotscles{#motscles}
