--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -4,31 +4,31 @@
 
 \nouvelleressource{R107}{Fondamentaux de la programmation}
 
-\ajoutheures{41}{30}
+\ajoutRheures{41}{30}
 
 %% Les compétences et les ACs
-\ajoutcompetence{RT1-Administrer}{\niveauA}
+\ajoutRcompetence{RT1-Administrer}{\niveauA}
 
 
 
-\ajoutcompetence{RT2-Connecter}{\niveauA}
+\ajoutRcompetence{RT2-Connecter}{\niveauA}
 
 
 
-\ajoutcompetence{RT3-Programmer}{\niveauA}
+\ajoutRcompetence{RT3-Programmer}{\niveauA}
 
-\ajoutac{AC0311}{Utiliser un système informatique et ses outils}
-\ajoutac{AC0312}{Lire, exécuter, corriger et modifier un programme}
-\ajoutac{AC0313}{Traduire un algorithme, dans un langage et pour un environnement donné}
-\ajoutac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
+\ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
+\ajoutRac{AC0312}{Lire, exécuter, corriger et modifier un programme}
+\ajoutRac{AC0313}{Traduire un algorithme, dans un langage et pour un environnement donné}
+\ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
-\ajoutsae{SAÉ15}{Traiter des données}
+\ajoutRsae{SAÉ15}{Traiter des données}
 
 % Les pre-requis
 
 
 % Le descriptif
-\ajoutancrage{Elle fournit les bases conceptuelles et pratiques pour concevoir et
+\ajoutRancrage{Elle fournit les bases conceptuelles et pratiques pour concevoir et
 spécifier formellement un traitement automatisé de l'information. Ces
 bases pourront venir en appui de nombreuses compétences techniques (en
 informatique, en réseau, en télécommunication, \ldots) que le
@@ -39,7 +39,7 @@ notamment le développement d'outils informatiques à usage interne d'une
 de la maintenance des outils logiciels (compétence RT1-Administrer).}
 
 % Contenus
-\ajoutcontenudetaille{
+\ajoutRcontenudetaille{
 En utilisant un langage de programmation, comme par exemple Python, les
 contenus suivants seront traités :
 \begin{itemize}
@@ -75,4 +75,4 @@ L'utilisation de l'anglais est préconisée pour la documentation du code.
 }
 
 % Mots-clés
-\ajoutmotscles{Algorithmes, langages de programmation, méthodologie de développement, suivi de versions}
+\ajoutRmotscles{Algorithmes, langages de programmation, méthodologie de développement, suivi de versions}
