--- a/latex/modeles/tableau_ressource.tex
+++ b/latex/modeles/tableau_ressource.tex
@@ -15,7 +15,8 @@
 	\xdef\COMP{#2} % le code de la compétence sous la forme A
 	
   \forLoop{1}{\value{cptressourceac\CODE\COMP}}{noligne}{
-		\xdef\contenu{{\csname ressourceaccode\CODE\COMP\Alph{noligne}\endcsname} | {\csname ressourceacname\CODE\COMP\Alph{noligne}\endcsname}}
+		\xdef\contenu{{\csname Raccode\CODE\COMP\Alph{noligne}\endcsname} |
+				{\csname Racname\CODE\COMP\Alph{noligne}\endcsname}}
 		\contenu			
    \tabularnewline %
    }
@@ -30,7 +31,8 @@
 		}{
 		\begin{tabular}[t]{@{}T@{}}%
 			\forLoop{1}{\value{cptressourcesae\CODE}}{noligne}{
-						\xdef\contenu{{\csname ressourcesaecode\CODE\Alph{noligne}\endcsname} | {\csname ressourcesaename\CODE\Alph{noligne}\endcsname}}
+						\xdef\contenu{{\csname Rsaecode\CODE\Alph{noligne}\endcsname} |
+								{\csname Rsaename\CODE\Alph{noligne}\endcsname}}
 				\contenu			
 			 \tabularnewline %
 			 }
@@ -47,7 +49,8 @@ Aucun
 \begin{tabular}[t]{@{}T@{}}%
 
   \forLoop{1}{\value{cptressourceprerequis\CODE}}{noligne}{
-				\xdef\contenu{{\csname ressourceprerequiscode\CODE\Alph{noligne}\endcsname} | {\csname ressourceprerequisname\CODE\Alph{noligne}\endcsname}}
+				\xdef\contenu{{\csname Rprerequiscode\CODE\Alph{noligne}\endcsname} |
+						{\csname Rprerequisname\CODE\Alph{noligne}\endcsname}}
 		\contenu			
    \tabularnewline %
    }
@@ -61,10 +64,10 @@ Aucun
 	
 	\begin{tabular}[t]{@{}T@{}} 
 	% {\bfseries Ancrage et contexte professionnel :} \\
-	\csname ressourceancrage\CODE\endcsname \\
+	\csname Rancrage\CODE\endcsname \\
 	{\bfseries Contenus :} \\
 	%{\setlength{\extrarowheight}{1pt} 
-	\csname ressourcecontenudetaille\CODE\endcsname 
+	\csname Rcontenu\CODE\endcsname
 	%}
 	\end{tabular}
 }
@@ -87,19 +90,19 @@ Aucun
 \begin{tabular}[t]{|P|Q|P|Q|}
 \hline % 1ère ligne
 	{\bfseries Ressource} 
-	& \multicolumn{3}{l|}{\bfseries \csname ressourcename\CODE\endcsname} \\
+	& \multicolumn{3}{l|}{\bfseries \csname Rname\CODE\endcsname} \\
 \hline % 2ème ligne
 	{\bfseries Code} 
-	& \csname ressourcecode\CODE\endcsname 
+	& \csname Rcode\CODE\endcsname
 	& {\bfseries Semestre} 
-	& \csname ressourcesem\CODE\endcsname \\
+	& \csname Rsem\CODE\endcsname \\
 \hline % 3ème ligne Heures
 { \setlength{\extrarowheight}{0pt}
 	\begin{tabular}[t]{@{}Q@{}} \bfseries Heures de formation \\ \bfseries encadrées \end{tabular}
 } 
-& {\csname ressourcetraining\CODE\endcsname}h 
+& {\csname Rtraining\CODE\endcsname}h
 & {\bfseries dont heures de TP} 
-& {\csname ressourcetp\CODE\endcsname}h \\
+& {\csname Rtp\CODE\endcsname}h \\
 \hline
 \end{tabular}
 
@@ -108,11 +111,11 @@ Aucun
 \hline
 \multicolumn{3}{|c|}{\bfseries Compétence(s) ciblées et apprentissage(s) critique(s) couvert(s)} \\
 \hline
-	\textit{\csname ressourcecomp\CODE A\endcsname} | {\csname ressourcecompniveau\CODE A\endcsname} 
+	\textit{\csname Rcomp\CODE A\endcsname} | {\csname Rniveau\CODE A\endcsname}
 	&
-	\textit{\csname ressourcecomp\CODE B\endcsname} | {\csname ressourcecompniveau\CODE B\endcsname} 
+	\textit{\csname Rcomp\CODE B\endcsname} | {\csname Rniveau\CODE B\endcsname}
 	&
-	\textit{\csname ressourcecomp\CODE C\endcsname} | {\csname ressourcecompniveau\CODE C\endcsname} 
+	\textit{\csname Rcomp\CODE C\endcsname} | {\csname Rniveau\CODE C\endcsname}
 \\
 \hline % AC de RT1
 {\tableauAC{\CODE}{A}
@@ -136,7 +139,7 @@ Aucun
 \hline
 {\bfseries Descriptif détaillé } & \tableauDescriptif{\CODE} \\
 \hline
-{\bfseries Mots-clés} & {\csname ressourcemotscles\CODE\endcsname} \\
+{\bfseries Mots-clés} & {\csname Rmotscles\CODE\endcsname} \\
 \hline
 
 \end{tabular}
